# mail

./: .env.example  .envrc  .gitignore  Cargo.toml  README.md  devenv.nix  flake.nix
crates/mail/: Cargo.toml
crates/mail-engine/: Cargo.toml
crates/mail-engine/src/: lib.rs
crates/mail/src/: main.rs
docs/openai/: mail-client-ontwikkeling.md  rust-ontwikkeling.md  software-ontwikkeling.md
