[workspace]
members = [
  "crates/mail",
  "crates/mail-engine",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["mail contributors"]

[workspace.dependencies]
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
