[workspace]
members = [
  "crates/mail",
  "crates/mail-engine",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["mail contributors"]

[workspace.dependencies]
anyhow = "1.0.100"
iced = { version = "0.13.1", default-features = false, features = ["tiny-skia", "fira-sans", "auto-detect-theme", "tokio"] }
libsql = { version = "0.9.29", default-features = false, features = ["core"] }
oauth2 = "5.0.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "time", "net", "io-util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.4"
webbrowser = "1.0.6"
